# poverty-mode

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  clippy.toml  prek.toml
.github/: renovate.json
.github/workflows/: ci.yaml  ci.yml  release.yaml  release.yml
scripts/: format-section-comments.py
src/: agent.rs  agent_tests.rs  central.rs  central_tests.rs  clean.rs  clean_tests.rs  cli.rs  cli_tests.rs  config.rs  config_tests.rs  doctor.rs  doctor_tests.rs  download.rs  download_tests.rs  error.rs  error_tests.rs  lib.rs  logging.rs  logging_tests.rs  main.rs  orchestrator.rs  orchestrator_tests.rs  paths.rs  paths_tests.rs  proxy.rs  proxy_tests.rs  status.rs  status_tests.rs  test_support.rs  tui.rs  tui_tests.rs
src/agent/: claude.rs  claude_tests.rs  codex.rs  codex_tests.rs
src/config/: overrides.rs  overrides_tests.rs
src/orchestrator/: manager.rs  manager_tests.rs  teardown.rs  teardown_tests.rs
src/proxy/: headroom.rs  headroom_tests.rs  pino.rs  pino_tests.rs
src/tui/: reducer.rs  reducer_tests.rs
src/tui/reducer/: edit.rs  edit_tests.rs  focus.rs  focus_tests.rs  settings.rs  settings_tests.rs
tests/: EMPIRICAL_GATES.md  agent_empirical.rs  central_async_safety.rs  central_live.rs  central_live_doc.rs  central_version_http.rs  chain.rs  chain_failclosed.rs  chain_signals.rs  chain_signals_windows.rs  ci_workflow.rs  cli.rs  diagnostics.rs  download_http.rs  headroom_dep.rs  headroom_engine.rs  interactive_dispatch.rs  log_redirection.rs  nested_reuse.rs  packaging.rs  proxy_cli.rs  proxy_engine.rs  release_workflow.rs  run_cli.rs
tests/common/: fakebin.rs  fixtures.rs  mod.rs  stub.rs
